@startuml

hide circle
skinparam classAttributeIconSize 0

title TripTop ApiGateway RequestInterceptor class diagram

interface GlobalFilter <<interface>> {
    + filter(exchange: ServerWebExchange, chain: GatewayFilterChain): void
}
note "Komt van Spring Cloud Gateway" as filterNote

filterNote .. GlobalFilter

interface PriorityOrdered <<interface>> {
    + getOrder(): void
}

filterNote .. PriorityOrdered

class InboundRequestFilter {
}

interface IAuthStrategy <<interface>> {
    - authenticate(headers: Map<String, String>): boolean
    - getStrategyName(): String
}

class RestTemplate{
}

note "Komt van Spring Boot" as restTemplateNote
restTemplateNote .. RestTemplate

class AuthStrategyFactory {
    + getStrategy(strategyType: String): IAuthStrategy
}

abstract class ApiAuthStrategy <<abstract class>> {
}

class MockAuthStrategy {}
class MockLocalAuthStrategy {}

note "Een voorbeeld auth strategy die gemaakt kan worden" as mockAuthStrategyNote
mockAuthStrategyNote ..left MockAuthStrategy
mockAuthStrategyNote ..left MockLocalAuthStrategy

InboundRequestFilter -up-^ GlobalFilter
InboundRequestFilter -up-^ PriorityOrdered
InboundRequestFilter --> "- authStrategyFactory" AuthStrategyFactory

AuthStrategyFactory ..> IAuthStrategy : <<creates>>
InboundRequestFilter ..> IAuthStrategy : <<uses>>

ApiAuthStrategy --> "- restTempalte" RestTemplate
ApiAuthStrategy -up-^ IAuthStrategy

MockAuthStrategy -up-^ ApiAuthStrategy
MockLocalAuthStrategy -up-^IAuthStrategy


@enduml